# gpredomics

./: .gitignore  CITATION.cff  Cargo.toml  INSTALL_KOKKOS.md  README.md  build.rs  param.yaml
.cargo/: config.toml
.github/workflows/: rust.yml
c_src/: CMakeLists.txt  kokkos_bridge.cpp
docs/: aco.md  beam.md  cv.md  data.md  dev.md  ga.md  gpredomics_documentation.html  grid.md  ils.md  individual.md  lasso.md  mcmc.md  population.md  rejection.md  sa.md  use.md  vignette.html  vignette.md
docs/proposals/: alternative_datatypes.md
examples/: generate_version_experiments.rs
libkokkos_bridge/: CMakeLists.txt  kokkos_bridge.cpp
samples/100000/: Ytest.tsv  Ytrain.tsv  param.yaml
samples/Derosa2022/: X.tsv  y.tsv
samples/Qin2014_presence_bf/: Xtest.tsv  Xtrain.tsv
samples/tests/: X.tsv  param.yaml
src/: aco.rs  bayesian_mcmc.rs  beam.rs  csv_report.rs  cusparse.rs  cv.rs  data.rs  experiment.rs  ga.rs  gpu.rs  hyper.rs  ils.rs  individual.rs  individuals.rs  lasso.rs  lib.rs  main.rs  matrix.rs  param.rs  population.rs  sa.rs  shader.wgsl  spgemm.wgsl  types.rs  utils.rs  voting.rs
src/data/: mod.rs
src/population/: mod.rs
tests/: check_auc.py  test_beam_e2e_qin2014.rs  test_consistency.rs  test_csv_report.rs  test_ga_e2e_qin2014.rs  test_mcmc_e2e_qin2014.rs  test_serialization_compatibility.rs
tests/consistency/: test_serialization_compatibility.rs
