[package]
name = "gpredomics"
version = "0.2.0"
edition = "2021"

[dependencies]
csv = "1.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
statrs = "0.16"
rand_chacha = "0.3"
rayon = "1.7"
log = "0.4"
flexi_logger = "0.27"
chrono = "0.4"
signal-hook = "0.3"

[profile.flamegraph]
inherits = "release"        # Inherit most settings from the release profile
debug = true                # Include debug symbols for detailed profiling
opt-level = 2               # Reduce optimization for better granularity
codegen-units = 1           # Avoid splitting compilation into multiple units
lto = false   