[package]
name = "gpredomics"
version = "0.7.6"
edition = "2021"

[dependencies]
csv = "1.1"
fast-float = "0.2"
rustc-hash = "1.1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
statrs = "0.18"
rand_chacha = "0.3"
rayon = "1.7"
log = "0.4"
flexi_logger = "0.27"
chrono = "0.4"
signal-hook = "0.3"
wgpu = "24.0"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
sha2 = "0.10"
bincode = "1.3.3"
fishers_exact = "1.0.1"
toml = "0.5"
argmin = "0.10.0"
rmp-serde = "1.1"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[profile.flamegraph]
inherits = "release"        # Inherit most settings from the release profile
debug = true                # Include debug symbols for detailed profiling
opt-level = 2               # Reduce optimization for better granularity
codegen-units = 1           # Avoid splitting compilation into multiple units
lto = false   

[lib]
name = "gpredomics" # Name of your library crate
path = "src/lib.rs"        # Path to your library file

[[bin]]
name = "gpredomics"  # Name of the binary
path = "src/main.rs"       # Path to the binary's main file
